--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "ngx-owl-carousel-o": "^14.0.1",
+    "@apollo/client": "3.6.9",
+    "angular-auth-oidc-client": "^15.0.0",
+    "apollo-angular": "^3.0.1",
+    "graphql": "^16",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
