--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cheems-angular-web",
   "version": "0.0.0",
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,8 +21,11 @@
     "@angular/router": "~13.3.0",
     "@apollo/client": "3.6.9",
     "angular-auth-oidc-client": "^15.0.0",
+    "animate.css": "^4.1.1",
     "apollo-angular": "^3.0.1",
+    "extract-files": "9.0.0",
     "graphql": "^16",
+    "ngx-owl-carousel-o": "7.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,6 +34,7 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/extract-files": "^8.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
