--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "allowJs": true,
+    "checkJs": false,
     "module": "es2020",
     "lib": [
       "es2020",
