feat and fix add and fix some model(metadata and productype) add register pages divide home pages divide product-details page and add query productType add some pageviewmodel, viewdata and some query grapghql change UI product details, product list and home pages. add some common components (ow-carousel, slideshow-gallery) change theme (header and footer) delete introduction pages

--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/animate.css/animate.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -106,10 +103,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/animate.css/animate.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
