--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "enableIvy": false
   }
 }
