--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cheems-angular-web",
   "version": "0.0.0",
-
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -25,9 +25,8 @@
     "apollo-angular": "^3.0.1",
     "extract-files": "9.0.0",
     "graphql": "^16",
-    "ngx-owl-carousel-o": "7.0.1",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
