feat and fix some components add style animation add some model add pagination page view model astract class update UI home component update UI product details components update UI product list component change UI and logic ow-carousel-card update slideshow-component add some image

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "cSpell.words": [
         "asynciterable"
-    ]
+    ],
+    "background.fullscreen": {
+      "image": "https://www.gamingscan.com/wp-content/uploads/2022/01/Ganyu-Build-Guide-For-Genshin-Impact.jpg", // url of your image
+      // "image": ["https://pathtoimage.png"], // An array may be useful when set interval for carousel
+      "opacity": 0.91, // 0.85 ~ 0.95 recommended
+      "size": "cover", // also css, `cover` to self-adaption (recommended)，or `contain`、`200px 200px`
+      "position": "center", // alias to `background-position`, default `center`
+      "interval": 0 // seconds of interval for carousel, default `0` to disabled.
+    }
 }
